overflow scroll bug fix

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@
 #root {
   width: 100vw;
   height: 100vh;
-  overflow: auto;
 }
 
 @media screen and (max-width: 768px) {
